--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
 <!doctype html>
 <html lang="ko">
+<head>
+<title>온라인 프로필</title>
+<meta charset="utf-8">>
+<style>
+    .left-side{
+        position: absolute;
+        top: 0px;
+        margin-left: 0px;
+        width: 350px;
+        height: 100%;
+        background-color: #d3d3d3;
+        text-align: center;
+    }
