--- a/index.html
+++ b/index.html
@@ -13,3 +13,28 @@
         background-color: #d3d3d3;
         text-align: center;
     }
+    .right-side {
+        position: absolute;
+        top:0;
+        margin-left: 0;
+        right: 0;
+        width: calc(100% - 400px);
+        height: 100%
+    }
+    table {
+        width : 70%; 
+        border : 1px solid #222; 
+        border-collapse : collapse; 
+    }
+
+    thead {
+        background: #eee;
+    }
+
+    th, td {
+        border: 1px solid #ccc;
+        padding: 5px;
+        font-size: 0.8em;
+        text-align: center;
+    }
+</style>
