--- a/index.html
+++ b/index.html
@@ -38,3 +38,15 @@
         text-align: center;
     }
 </style>
+</head>
+<body>
+    <div id="container">
+        <asdie>
+            <div class="left-side">
+                <div id="namecard">
+                    <img src="pf.jpg" alt="" top="100" width="200" height="200" style="margin-top: 50px">
+                    <h1>Songmi Lee</h1>
+                    <p>운은 계획에서 비롯된다.</p>
+                </div>
+            </div>
+        </asdie>
