--- a/index.html
+++ b/index.html
@@ -50,3 +50,18 @@
                 </div>
             </div>
         </asdie>
+        <div class="right-side">
+        <div id="main">
+            <section>
+                <h2 class="subtitle">Who am I?</h2>
+                <p>
+                     정보보안: 포렌식, 악성코드 분석, 모의해킹, 보안 솔루션
+                </p>
+                <ul>
+                    <li>기본
+                        <ul>
+                            <li>2003.09.11生</li>
+                            <li>광주광역시出生</li>
+                            <li>단국대학교 산업보안학과 재학 : 32223223</li>
+                        </ul>
+                    </li>
