--- a/index.html
+++ b/index.html
@@ -65,3 +65,23 @@
                             <li>단국대학교 산업보안학과 재학 : 32223223</li>
                         </ul>
                     </li>
+                    <li>취미
+                        <ul>
+                            <li>그림: 라인드로잉, 캐릭터드로잉, 일러스트</li>
+                            <img src="drawing3.jpg" alt="" top="100" width="200" height="200" style="margin-left: 20px"><img src="drawing2.jpg" alt="" top="100" width="200" height="200"><img src="dr4.png" alt="" top="100" width="210" height="200">
+                            <li>노래듣기</li>
+                            <video src="Suburbia.mp4" top="100" width="560" height="315" controls></video>
+                            <li>게임(PC, 모바일, 닌텐도)</li>
+                    </li>
+                </ul>
+            </section>
+
+            <section>
+                <h2 class="subtitle">Experience</h2>
+                <u1>
+                    <li>자격증
+                        <ul>
+                            <li>정보보호관리사</li>
+                            <ii>파이썬프로그래밍 활용능력 2급</ii>
+                            <li>리눅스마스터 (준비중)</li>
+                        </ul>
