--- a/index.html
+++ b/index.html
@@ -85,3 +85,13 @@
                             <ii>파이썬프로그래밍 활용능력 2급</ii>
                             <li>리눅스마스터 (준비중)</li>
                         </ul>
+                    </li>
+                    <li>외부 교육 수료증
+                        <ul>
+                            <li>KITRI: 기업데이터 보호 역량강화 교육</li>
+                            <li>NIPA: SW 코딩 훈련</li>
+                        </ul>
+                    </li>
+                </u1>
+            </section>
+            
