--- a/index.html
+++ b/index.html
@@ -95,3 +95,36 @@
                 </u1>
             </section>
             
+            <section>
+                <h2 class="subtitle">Education</h2>
+                <table>
+                    <caption>학력 사항</caption>
+                    <thead>
+                        <tr>
+                            <th>출신학교</th>
+                            <th>전공</th>
+                            <th>구분</th>
+                        </tr>
+                    <tbody>
+                        <tr>
+                            <td>광림초등학교</td>
+                            <td>-</td>
+                            <td>졸업</td>
+                        </tr>
+                        <tr>
+                            <td>대자중학교</td>
+                            <td>-</td>
+                            <td>졸업</td>
+                        </tr>
+                        <tr>
+                            <td>전남여자고등학교</td>
+                            <td>-</td>
+                            <td>졸업</td>
+                        </tr>
+                        <tr>
+                            <td>단국대학교</td>
+                            <td>산업보안학과</td>
+                            <td>재학</td>
+                        </tr>
+                    </tbody>
+                    </thead>
