--- a/index.html
+++ b/index.html
@@ -128,3 +128,10 @@
                         </tr>
                     </tbody>
                     </thead>
+                </table>
+            </section>
+        </div>
+        </div>
+    </div>
+</body>
+</html>
